--- a/13_12_2021_Angular/first-app/src/app/app.component.html
+++ b/13_12_2021_Angular/first-app/src/app/app.component.html
@@ -1,8 +1,24 @@
 <div class="container">
   <h1>Hello Pasha</h1>
+  <hr />
+  <button (click)="toggleCards()">Toggle Cards</button>
+  <hr />
+  <div *ngIf="toggle; else noCards">
+    <app-card
+      *ngFor="let iterCard of cards; let idx = index"
+      [card]="iterCard"
+      [index]="idx + 1"
+    ></app-card>
+  </div>
+  <hr />
+  <hr />
+  <hr />
   <!-- <app-form></app-form> -->
-  <app-card></app-card>
-  <app-card></app-card>
-  <app-card></app-card>
-  <app-card></app-card>
+  <div *ngIf="toggle; else noCards">
+    <app-card></app-card>
+    <app-card></app-card>
+  </div>
+  <ng-template #noCards>
+    <p>Cards are hidden</p>
+  </ng-template>
 </div>
