--- a/13_12_2021_Angular/first-app/src/app/card/card.component.html
+++ b/13_12_2021_Angular/first-app/src/app/card/card.component.html
@@ -4,11 +4,34 @@
       color: title.length < 5 ? 'black' : 'green'
     }"
   >
-    {{ title }}
+    {{ index }}{{ card.title }}
   </h2>
-  <p>
+  <p
+    class="text"
+    [ngClass]="{
+      blue: textColor === 'blue',
+      green: textColor === 'green',
+      red: textColor === 'red'
+    }"
+  >
+    {{ card.text }}
+  </p>
+  <div>
+    <strong>{{ cardDate | date: "dd.MM.yyyy HH:mm:ss" }}</strong>
+  </div>
+  <p
+    class="text"
+    [class.blue]="textColor === 'blue'"
+    [class.green]="textColor === 'green'"
+    [class.red]="textColor === 'red'"
+  >
     {{ text }}
   </p>
+  <div>
+    <button (click)="textColor = 'blue'">Set blue</button>
+    <button (click)="textColor = 'green'">Set green</button>
+    <button (click)="textColor = 'red'">Set red</button>
+  </div>
   <strong>Number:{{ number }}</strong>
   <em>{{ obj | json }}</em>
   <pre>{{ obj | json }}</pre>
@@ -30,6 +53,10 @@
     />
   </div>
   <div>
-    <input type="text" [(ngModel)]="title" (ngModelChange)="chageHandler()" />
+    <input
+      type="text"
+      [(ngModel)]="card.title"
+      (ngModelChange)="chageHandler()"
+    />
   </div>
 </div>
