--- a/13_12_2021_Angular/first-app/src/app/card/card.component.scss
+++ b/13_12_2021_Angular/first-app/src/app/card/card.component.scss
@@ -14,4 +14,16 @@
       height: 100%;
     }
   }
+  .text {
+    font-size: 1.5rem;
+    &.blue {
+      color: blue;
+    }
+    &.green {
+      color: green;
+    }
+    &.red {
+      color: red;
+    }
+  }
 }
