Angular routing chapter 5

--- a/17_12_2021_Angular_from_docs/ang_tutorial/src/app/heroes/heroes.component.html
+++ b/17_12_2021_Angular_from_docs/ang_tutorial/src/app/heroes/heroes.component.html
@@ -16,11 +16,11 @@
     {{ hero.name }}
   </li>
 </ul>
-<hr />
-<app-hero-detail
+<!-- <hr /> -->
+<!-- <app-hero-detail
   *ngIf="selectedHero; else elseBlock"
   [hero]="selectedHero"
 ></app-hero-detail>
 <ng-template #elseBlock>
   <p>No selected Hero</p>
-</ng-template>
+</ng-template> -->
