--- a/17_12_2021_Angular_from_docs/ang_tutorial/src/app/hero-detail/hero-detail.component.html
+++ b/17_12_2021_Angular_from_docs/ang_tutorial/src/app/hero-detail/hero-detail.component.html
@@ -6,6 +6,7 @@
     <input id="hero-name" [(ngModel)]="hero.name" placeholder="name" />
   </div>
   <button (click)="goBack()">go back</button>
+  <button (click)="save()">Save</button>
 </div>
 <ng-template #elseBlock>
   <p>No selected Hero</p>
