--- a/17_12_2021_Angular_from_docs/ang_tutorial/src/app/heroes/heroes.component.html
+++ b/17_12_2021_Angular_from_docs/ang_tutorial/src/app/heroes/heroes.component.html
@@ -12,8 +12,17 @@
       <span class="badge">{{ hero.id }}</span>
       {{ hero.name }}
     </a>
+    <button class="delete" title="delete hero" (click)="delete(hero)">x</button>
   </li>
 </ul>
+<div>
+  <label for="new-hero">Hero name:</label>
+  <input id="new-hero" #heroName />
+  <button class="add-button" (click)="add(heroName.value); heroName.value = ''">
+    Add hero
+  </button>
+</div>
+
 <!-- <hr /> -->
 <!-- <app-hero-detail
   *ngIf="selectedHero; else elseBlock"
