--- a/Artcom/artcomtask/src/app/first-component/first-component.component.html
+++ b/Artcom/artcomtask/src/app/first-component/first-component.component.html
@@ -8,8 +8,17 @@
   </div>
 </div>
 <div class="secondBlock" *ngIf="!this.close">
-  <div *ngIf="this.curItem.length">
-    <p *ngFor="let i of this.curItem">{{ i }}</p>
+  <div *ngIf="this.curInd >= 0">
+    <div *ngFor="let i of this.data[this.curInd] | keyvalue">
+      <!-- можно так -->
+      <!-- <p *ngIf="i.value === null">it's unknown</p>
+      <p *ngIf="i.value !== null">{{ i.key }}:{{ i.value }}</p> -->
+
+      <p *ngIf="i.value === null; else p1">it's unknown</p>
+      <ng-template #p1>
+        <p>{{ i.key }}:{{ i.value }}</p>
+      </ng-template>
+    </div>
   </div>
   <button class="closeBtn" (click)="closeBtn()">Close</button>
 </div>
